Revision history for Perl extension CPAN::Mini::Extract

1.17 Tue 15 May 2007
	- Integrating LWP::Online to auto-detect the internet

1.16 Mon 14 May 2007
	- Don't pre-filter for only Perl files

1.15 Mon 14 May 2007
	- Fixing a typo in the handling of extract_filter
	- Upgrading to Module::Install 0.67

0.13 Sun Nov 13 2005
	- Fixed a bug when cleaning up removed files from extract dir

0.12 Fri Nov 11 2005
	- Fixed a typo bug

0.11 Fri Nov 11 2005
	- Added better testing
	- Add better use of Archive::Tar
	- Seperated out the actual extraction mechanics so it can more
	  easily be upgraded to Archive::Extract later

0.10 Wed Oct 12 2005
	- Converted from CPAN::Processor to CPAN::Mini::Extract.
	- Stripped out the PPI::Processor code.
	- This module is now considered EXPERIMENTAL again.

0.08 Tue Jan 11 2005
	- Adding the update_mirror option to disable CPAN synchronisation
	- Updated copyright date

0.07 Mon Jan 10 2005
	- Fixing some small bugs in the Archive::Tar report
	- Added a report for "Build.PL but no Makefile.PL in tarball"
	  (Requested by Randal Schwartz)
	- Adding some additional trace messages

0.06 Mon Jan 10 2005
	- Removed a useless setting of $self->{limit_processor}
	- Updated the version dependency to match changes to PPI::Processor
	- Fixed several bugs in the Archive::Tar extraction code

0.05 Mon Jan 10 2005
	- Added support for Archive::Tar warning reports

0.04 Sun Jan  9 2005
	- Added the force_processor option

0.02 Thu Dec 30 2004
	- Upgraded version dependency to 5.006
	- Cleaned up and added code to handle tarballs errors better

0.01 Tue Dec 28 2004
	- Created the initial version of the module